--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -103,6 +103,10 @@ steps:
   - group: "Column Examples"
     steps:
 
+      - label: ":computer: single column hydrostatic balance"
+        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --hyperdiff false --config column --z_max 30e3 --z_elem 45 --dz_bottom 30 --dz_top 5000 --t_end 10days --dt 3hours --dt_save_to_sol 3hours --job_id sphere_single_column_hydrostatic_balance"
+        artifact_paths: "sphere_single_column_hydrostatic_balance/*"
+
       - label: ":computer: single column radiative equilibrium gray"
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --rad gray --hyperdiff false --config column --z_max 70e3 --z_elem 70 --dz_bottom 100 --dz_top 10000 --t_end 654days --dt 3hours --dt_save_to_sol 30hours --job_id sphere_single_column_radiative_equilibrium_gray"
         artifact_paths: "sphere_single_column_radiative_equilibrium_gray/*"
@@ -223,6 +227,10 @@ steps:
 
   - group: "Milestones"
     steps:
+
+      - label: ":computer: hydrostatic balance (ρe_tot)"
+        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --perturb_initstate false --job_id sphere_hydrostatic_balance_rhoe"
+        artifact_paths: "sphere_hydrostatic_balance_rhoe/*"
 
       - label: ":computer: baroclinic wave (ρe_tot)"
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --job_id sphere_baroclinic_wave_rhoe --regression_test true"
